--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -90,7 +90,7 @@ extraArgs: []
   # - --cluster-resource-namespace=kube-system
   # When this flag is enabled, secrets will be automatically removed when the certificate resource is deleted
   # - --enable-certificate-owner-ref=true
-  # Use this flag to enabled or disable arbitrary controllers, for example, disable the CertificiateRequests approver
+  # Use this flag to enabled or disable arbitrary controllers, for example, disable the CertificateRequests approver
   # - --controllers=*,-certificaterequests-approver
 
 extraEnv: []
