--- a/deploy/crds/crd-issuers.yaml
+++ b/deploy/crds/crd-issuers.yaml
@@ -88,7 +88,7 @@ spec:
                         - keySecretRef
                       properties:
                         keyAlgorithm:
-                          description: '(deprecated) keyAlgorithm is the MAC key algorithm that the key is used for. Valid values are "HS256", "HS384" and "HS512". Deprecation warning: this value is no longer used as golang/x/crypto/acme hardcodes the algorithm to HS256.'
+                          description: 'Deprecated: keyAlgorithm field exists for historical compatibility reasons and should not be used. The algorithm is now hardcoded to HS256 in golang/x/crypto/acme.'
                           type: string
                           enum:
                             - HS256
@@ -1125,7 +1125,7 @@ spec:
                         - keySecretRef
                       properties:
                         keyAlgorithm:
-                          description: '(deprecated) keyAlgorithm is the MAC key algorithm that the key is used for. Valid values are "HS256", "HS384" and "HS512". Deprecation warning: this value is no longer used as golang/x/crypto/acme hardcodes the algorithm to HS256.'
+                          description: 'Deprecated: keyAlgorithm field exists for historical compatibility reasons and should not be used. The algorithm is now hardcoded to HS256 in golang/x/crypto/acme.'
                           type: string
                           enum:
                             - HS256
@@ -2164,7 +2164,7 @@ spec:
                         - keySecretRef
                       properties:
                         keyAlgorithm:
-                          description: '(deprecated) keyAlgorithm is the MAC key algorithm that the key is used for. Valid values are "HS256", "HS384" and "HS512". Deprecation warning: this value is no longer used as golang/x/crypto/acme hardcodes the algorithm to HS256.'
+                          description: 'Deprecated: keyAlgorithm field exists for historical compatibility reasons and should not be used. The algorithm is now hardcoded to HS256 in golang/x/crypto/acme.'
                           type: string
                           enum:
                             - HS256
@@ -3203,7 +3203,7 @@ spec:
                         - keySecretRef
                       properties:
                         keyAlgorithm:
-                          description: '(deprecated) keyAlgorithm is the MAC key algorithm that the key is used for. Valid values are "HS256", "HS384" and "HS512". Deprecation warning: this value is no longer used as golang/x/crypto/acme hardcodes the algorithm to HS256.'
+                          description: 'Deprecated: keyAlgorithm field exists for historical compatibility reasons and should not be used. The algorithm is now hardcoded to HS256 in golang/x/crypto/acme.'
                           type: string
                           enum:
                             - HS256
