add ingressClass param
Signed-off-by: Frank Kloeker <f.kloeker@telekom.de>

--- a/deploy/charts/cert-manager-issuer/templates/issuer_letsencrypt-prod.yaml
+++ b/deploy/charts/cert-manager-issuer/templates/issuer_letsencrypt-prod.yaml
@@ -16,4 +16,4 @@ spec:
     - selector: {}
       http01:
         ingress:
-          class: nginx
+          class: {{ .Values.letsencrypt.ingressClass | default "nginx" }}
