--- a/deploy/charts/cert-manager-issuer/templates/issuer_letsencrypt-staging.yaml
+++ b/deploy/charts/cert-manager-issuer/templates/issuer_letsencrypt-staging.yaml
@@ -15,4 +15,4 @@ spec:
     solvers:
     - http01:
         ingress:
-          class: nginx
+          class: {{ .Values.letsencrypt.ingressClass | default "nginx" }}
