--- a/test/e2e/framework/helper/BUILD.bazel
+++ b/test/e2e/framework/helper/BUILD.bazel
@@ -25,6 +25,7 @@ go_library(
         "//test/e2e/framework/helper/featureset:go_default_library",
         "//test/e2e/framework/helper/validations:go_default_library",
         "//test/e2e/framework/log:go_default_library",
+        "//test/e2e/util:go_default_library",
         "@com_github_onsi_ginkgo//:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
