--- a/pkg/issuer/acme/dns/akamai/BUILD.bazel
+++ b/pkg/issuer/acme/dns/akamai/BUILD.bazel
@@ -2,10 +2,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "akamai.go",
-        "edgegridauth.go",
-    ],
+    srcs = ["akamai.go"],
     importpath = "github.com/jetstack/cert-manager/pkg/issuer/acme/dns/akamai",
     visibility = ["//visibility:public"],
     deps = [
@@ -14,6 +11,8 @@ go_library(
         "//pkg/util:go_default_library",
         "@com_github_go_logr_logr//:go_default_library",
         "@com_github_pkg_errors//:go_default_library",
+	"@com_github_akamai_AkamaiOPEN-edgegrid-golang//configdns-v2:go_default_library",
+        "@com_github_akamai_AkamaiOPEN-edgegrid-golang//edgegrid:go_default_library",
     ],
 )
 
@@ -27,6 +26,7 @@ go_test(
     deps = [
         "//pkg/issuer/acme/dns/util:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
+	"@com_github_akamai_AkamaiOPEN-edgegrid-golang//configdns-v2:go_default_library",
     ],
 )
 
