Add support to allow CRD conversion webhooks from outside of the cluster
Related to #3876

Signed-off-by: Anton Johansson <hello@anton-johansson.com>

--- a/deploy/crds/crd-certificaterequests.yaml
+++ b/deploy/crds/crd-certificaterequests.yaml
@@ -30,10 +30,14 @@ spec:
     webhook:
       conversionReviewVersions: ["v1", "v1beta1"]
       clientConfig:
+        {{- if .Values.webhook.url.host }}
+        url: https://{{ .Values.webhook.url.host }}/convert
+        {{- else }}
         service:
-          namespace: '{{ .Release.Namespace }}'
-          name: '{{ template "webhook.fullname" . }}'
+          name: {{ template "webhook.fullname" . }}
+          namespace: {{ .Release.Namespace | quote }}
           path: /convert
+        {{- end }}
   versions:
     - name: v1alpha2
       subresources:
