Adds functionality to generate issuer conditions to gen
So they can be generated in tests with less lines of code

Signed-off-by: irbekrm <irbekrm@gmail.com>

--- a/test/unit/gen/BUILD.bazel
+++ b/test/unit/gen/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "certificate.go",
         "certificaterequest.go",
         "challenge.go",
+        "conditions.go",
         "csr.go",
         "doc.go",
         "issuer.go",
