--- a/pkg/internal/apis/acme/validation/BUILD.bazel
+++ b/pkg/internal/apis/acme/validation/BUILD.bazel
@@ -26,6 +26,7 @@ go_test(
     ],
     embed = [":go_default_library"],
     deps = [
+        "//pkg/internal/api/validation:go_default_library",
         "//pkg/internal/apis/acme:go_default_library",
         "@io_k8s_apimachinery//pkg/util/validation/field:go_default_library",
         "@io_k8s_utils//pointer:go_default_library",
