--- a/pkg/internal/apis/certmanager/validation/BUILD.bazel
+++ b/pkg/internal/apis/certmanager/validation/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "clusterissuer.go",
         "issuer.go",
         "register.go",
+        "warnings.go",
     ],
     importpath = "github.com/jetstack/cert-manager/pkg/internal/apis/certmanager/validation",
     visibility = ["//visibility:public"],
@@ -42,7 +43,6 @@ go_test(
     ],
     embed = [":go_default_library"],
     deps = [
-        "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/internal/api/validation:go_default_library",
         "//pkg/internal/apis/acme:go_default_library",
